--- a/Aspire.Assignment/Assignment.UI/ClientApp/src/app/account/register.component.html
+++ b/Aspire.Assignment/Assignment.UI/ClientApp/src/app/account/register.component.html
@@ -18,12 +18,13 @@
                 </div>
             </div>
             <div class="form-floating mb-3">
-                <input id="floatingPassword" placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': f.password.errors && ( submitted ||f.password.touched) }"/>              
+                <input id="floatingPassword" placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': f.password.errors && ( submitted ||f.password.touched) ||e?.invalidPassword }"/>              
                 <label for="floatingPassword">Password</label>
                 <div *ngIf="f.password.errors && ( submitted ||f.password.touched)" class="invalid-feedback">
                     <div *ngIf="f.password.errors.required">Password is required</div>
-                    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                    <div *ngIf="f.password.errors.minlength">Password must be at least 9 characters</div>
                 </div>
+                <div *ngIf="e?.invalidPassword" class="invalid-feedback">{{e?.passwordStrength}}</div>
             </div>
             <div class="form-floating mb-3">
                 <input  id="floatingConfirmPassword" placeholder="Confirm Password" type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': f.confirmPassword.errors && ( submitted ||f.confirmPassword.touched) ||e?.notmatched }" />              
