--- a/Aspire.Assignment/Assignment.UI/ClientApp/src/app/app.component.html
+++ b/Aspire.Assignment/Assignment.UI/ClientApp/src/app/app.component.html
@@ -2,8 +2,10 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark px-3" *ngIf="user">
     <div class="navbar-nav">
         <a class="nav-item nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-        <a class="nav-item nav-link" routerLink="/apps" routerLinkActive="active">Apps</a>
-        <a class="nav-item nav-link" routerLink="/products" routerLinkActive="active">Products</a>
+        <!-- <a class="nav-item nav-link" routerLink="/apps" routerLinkActive="active">Apps</a>
+        <a class="nav-item nav-link" routerLink="/products" routerLinkActive="active">Products</a> -->
+        <a class="nav-item nav-link" routerLink="/skillset" routerLinkActive="active">Skills</a>
+        <a class="nav-item nav-link" routerLink="/approval" routerLinkActive="active">Approval</a>
         <a class="nav-item nav-link" routerLink="/users" routerLinkActive="active">Users</a>
         <button class="btn btn-link nav-item nav-link" (click)="logout()">Logout</button>
     </div>
